apps/kube/kbve/manifest/kbve-bbs-lb.yaml
apiVersion: v1
kind: Service
metadata:
    name: kbve-bbs-lb
    namespace: kbve
    annotations:
        lbipam.cilium.io/ips: '142.132.206.71'
        lbipam.cilium.io/sharing-key: public-71
        lbipam.cilium.io/sharing-cross-namespace: '*'
    labels:
        app: kbve
        kbve.com/lb-pool: public
        kbve.com/category: application
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: LoadBalancer
    selector:
        app: kbve
    ports:
        - name: bbs-petscii
          port: 6400
          targetPort: 6400
          protocol: TCP
        - name: bbs-ansi
          port: 6401
          targetPort: 6401
          protocol: TCP
