apps/kube/kbve/manifest/kbve-wt-lb.yaml
apiVersion: v1
kind: Service
metadata:
    name: kbve-wt-lb
    namespace: kbve
    labels:
        app: kbve
    annotations:
        metallb.io/allow-shared-ip: 'shared-public-ip'
spec:
    type: LoadBalancer
    externalTrafficPolicy: Local
    selector:
        app: kbve
    ports:
        - name: wt
          port: 5001
          targetPort: 5001
          protocol: UDP
