apps/kube/kbve/manifest/kbve-mc-redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: kbve-mc-redirect
    namespace: kbve
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - mc.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          filters:
              - type: RequestRedirect
                requestRedirect:
                    scheme: https
                    hostname: kbve.com
                    path:
                        type: ReplaceFullPath
                        replaceFullPath: /mc
                    statusCode: 301
