apps/kube/kbve/manifest/kbve-mc-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kbve-mc-redirect
    namespace: kbve
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-http
        nginx.ingress.kubernetes.io/permanent-redirect: https://kbve.com/mc$request_uri
        nginx.ingress.kubernetes.io/permanent-redirect-code: '301'
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - mc.kbve.com
              - minecraft.kbve.com
          secretName: kbve-mc-tls
    rules:
        - host: mc.kbve.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kbve-service
                            port:
                                number: 4321
        - host: minecraft.kbve.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kbve-service
                            port:
                                number: 4321
