apps/kube/kbve/manifest/kbve-ws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kbve-ws-ingress
    namespace: kbve
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
        nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
        nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
        nginx.ingress.kubernetes.io/upstream-hash-by: '$remote_addr'
spec:
    rules:
        - host: kbve.com
          http:
              paths:
                  - path: /ws
                    pathType: Prefix
                    backend:
                        service:
                            name: kbve-service
                            port:
                                number: 5000
