apps/kube/kbve/manifest/kbve-www-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kbve-www-redirect
    namespace: kbve
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-dns
        nginx.ingress.kubernetes.io/permanent-redirect: https://kbve.com$request_uri
        nginx.ingress.kubernetes.io/permanent-redirect-code: '301'
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - www.kbve.com
          secretName: kbve-www-tls
    rules:
        - host: www.kbve.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kbve-service
                            port:
                                number: 4321
